--- a/iDeliverPortal/Views/Home/Index.cshtml
+++ b/iDeliverPortal/Views/Home/Index.cshtml
@@ -42,11 +42,11 @@
             <a href="#" class="sidebar-toggler flex-shrink-0">
                 <i class="fa fa-bars"></i>
             </a>
-            <form class="d-none d-md-flex ms-4">
+         @*   <form class="d-none d-md-flex ms-4">
                 <input class="form-control border-0" type="search" placeholder="Search">
-            </form>
+            </form>*@
             <div class="navbar-nav align-items-center ms-auto">
-                <div class="nav-item dropdown">
+             @*<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                         <i class="fa fa-envelope me-lg-2"></i>
                         <span class="d-none d-lg-inline-flex">Message</span>
@@ -84,8 +84,8 @@
                         <hr class="dropdown-divider">
                         <a href="#" class="dropdown-item text-center">See all message</a>
                     </div>
-                </div>
-                <div class="nav-item dropdown">
+                </div>*@
+             @*   <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                         <i class="fa fa-bell me-lg-2"></i>
                         <span class="d-none d-lg-inline-flex">Notificatin</span>
@@ -108,7 +108,7 @@
                         <hr class="dropdown-divider">
                         <a href="#" class="dropdown-item text-center">See all notifications</a>
                     </div>
-                </div>
+                </div>*@
                 <div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                         <img class="rounded-circle me-lg-2" src="~/assets/images/user.png" alt="" style="width: 40px; height: 40px;">
@@ -117,8 +117,8 @@
                         </span>
                     </a>
                     <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                        <a href="#" class="dropdown-item">My Profile</a>
-                        <a href="#" class="dropdown-item">Settings</a>
+                        @*<a href="#" class="dropdown-item">My Profile</a>
+                        <a href="#" class="dropdown-item">Settings</a>*@
                         <a href="javascript:void(0)" ng-click="logout();" class="dropdown-item">Log Out</a>
                     </div>
                 </div>
@@ -162,11 +162,14 @@
             <div ng-if="SelectedModules=='7'">
               <div ng-include="'../partial/Location.html'"></div>
             </div>
+             <div ng-if="SelectedModules=='8'">
+              <div ng-include="'../partial/Order.html'"></div>
+            </div>
         </div>
 
         <!-- Blank End -->
         <!-- Footer Start -->
-        <div class="container-fluid pt-4 px-4">
+       @* <div class="container-fluid pt-4 px-4">
             <div class="bg-light rounded-top p-4">
                 <div class="row">
                     <div class="col-12 col-sm-6 text-center text-sm-start">
@@ -178,7 +181,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div>*@
         <!-- Footer End -->
     </div>
     <!-- Content End -->
@@ -191,4 +194,5 @@
 <script type="text/javascript" src="~/js/controllers/merchantBranchCtrl.js"></script>
 <script type="text/javascript" src="~/js/controllers/MerchantEmployeeCtrl.js"></script>
 <script type="text/javascript" src="~/js/controllers/LocationCtrl.js"></script>
+<script type="text/javascript" src="~/js/controllers/OrderCtrl.js"></script>
 }
