--- a/iDeliverPortal/wwwroot/partial/Dashboard.html
+++ b/iDeliverPortal/wwwroot/partial/Dashboard.html
@@ -20,7 +20,7 @@
                             <td>{{item.name}}</td>
                             <td>{{item.phone}}</td>
                             <td>
-                                <span ng-show="item.status==2" class="badge bg-danger">Not Available</span>
+                                <span ng-show="item.status==2" class="badge bg-danger">Busy</span>
                                 <span ng-show="item.status==1" class="badge bg-success"> Available</span>
                             </td>
                         </tr>
@@ -40,7 +40,7 @@
                             <th>Total Amount</th>
                             <th>Delivery Amount</th>
                             <th>Order time</th>
-                            <th>Count Down</th>
+                            <th>Location Name</th>
                             <th>Status</th>
                             <th>Drivers</th>
                         </tr>
@@ -52,9 +52,8 @@
                             <td>{{item.merchantPhone}}</td>
                             <td>{{item.totalAmount}}</td>
                             <td>{{item.deliveryAmount}}</td>
-
                             <td>{{item.orderDate }}</td>
-                            <td>{{getCountDown(item.orderDate)}}</td>
+                            <td>{{item.locationName}}</td>
 
                             <td>
                                 <span ng-if="item.status==1" class="badge bg-warning">New Order</span>
@@ -64,14 +63,14 @@
                             <td>
                                 <div class="row">
                                     <div class="col-9">
-                                        <select class="form-control my-1">
-                                            <option value="0">Please Selected</option>
-                                            <option ng-repeat="driver in newOrders.drivers ">{{driver.name}}</option>
+                                        <select class="form-control my-1"  ng-disabled="item.status==2"
+                                                ng-options="o.id as o.name for o in newOrders.activeDrivers"  ng-model="item.driverID">
+                                            <!--<option value="0">Please Selected</option>
+                                            <option ng-repeat="driver in newOrders.drivers ">{{driver.name}}</option>-->
                                         </select>
                                     </div>
                                     <div class="col-3">
-                                        <button class="btn btn-success p-1 form-control my-1" ng-click="AssignOrder(driver.id,item.Id)"> > </button>
-
+                                        <button class="btn btn-success p-1 form-control my-1" ng-disabled="item.status==2" ng-click="AssignOrder(item.driverID,item.id)"> > </button>
                                     </div>
                                 </div>
 
