--- a/iDeliverPortal/Views/Home/Index.cshtml
+++ b/iDeliverPortal/Views/Home/Index.cshtml
@@ -8,8 +8,9 @@
         <nav class="navbar bg-light navbar-light">
             <a href="index.html" class="navbar-brand mx-4 mb-3">
                 <h3 class="text-primary">
-                    <i class="fa fa-hashtag me-2"></i>
-                    {{profile.accounts[0].organization.name}}
+@*                    <i class="fa fa-hashtag me-2"></i>
+*@                   @* {{profile.accounts[0].organization.name}}*@
+                   <img style="width:135px" src="../assets/images/logo.png"/>
                 </h3>
             </a>
             <div class="d-flex align-items-center ms-4 mb-4">
@@ -39,7 +40,7 @@
             <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
                 <h2 class="text-primary mb-0"><i class="fa fa-hashtag"></i></h2>
             </a>
-            <a href="#" class="sidebar-toggler flex-shrink-0">
+            <a href="#" class="sidebar-toggler flex-shrink-0 text text-danger">
                 <i class="fa fa-bars"></i>
             </a>
          @*   <form class="d-none d-md-flex ms-4">
@@ -116,7 +117,7 @@
                             {{profile.accounts[0].firstName + ' ' + profile.accounts[0].lastName}}
                         </span>
                     </a>
-                    <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
+                    <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0" >
                         @*<a href="#" class="dropdown-item">My Profile</a>
                         <a href="#" class="dropdown-item">Settings</a>*@
                         <a href="javascript:void(0)" ng-click="logout();" class="dropdown-item">Log Out</a>
