--- a/iDeliverPortal/wwwroot/css/style.css
+++ b/iDeliverPortal/wwwroot/css/style.css
@@ -3,10 +3,11 @@
 }
 /********** Template CSS **********/
 :root {
-    --primary: #009CFF;
+    --danger: #009CFF;
     --light: #F3F6F9;
     --dark: #191C24;
     --bs-light: #f8f9fa;
+    --danger: #d7383d;
 }
 
 .back-to-top {
@@ -138,9 +139,9 @@
 
     .sidebar .navbar .navbar-nav .nav-link:hover,
     .sidebar .navbar .navbar-nav .nav-link.active {
-        color: var(--primary);
+        color: var(--danger);
         background: #FFFFFF;
-        border-color: var(--primary);
+        border-color: var(--danger);
     }
 
     .sidebar .navbar .navbar-nav .nav-link i {
@@ -187,7 +188,7 @@
 
     .content .navbar .navbar-nav .nav-link:hover,
     .content .navbar .navbar-nav .nav-link.active {
-        color: var(--primary);
+        color: var(--danger);
     }
 
     .content .navbar .sidebar-toggler,
@@ -242,11 +243,11 @@
 
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-    background: var(--primary);
+    background: var(--danger);
 }
 
 .bootstrap-datetimepicker-widget table td.today::before {
-    border-bottom-color: var(--primary);
+    border-bottom-color: var(--danger);
 }
 
 
@@ -271,12 +272,12 @@
     margin: 0 5px;
     width: 15px;
     height: 15px;
-    border: 5px solid var(--primary);
+    border: 5px solid var(--danger);
     border-radius: 15px;
     transition: .5s;
 }
 
     .testimonial-carousel .owl-dot.active {
         background: var(--dark);
-        border-color: var(--primary);
+        border-color: var(--danger);
     }
