--- a/iDeliverPortal/Views/Home/Login.cshtml
+++ b/iDeliverPortal/Views/Home/Login.cshtml
@@ -9,7 +9,9 @@
         <div class="col-12 col-sm-8 col-md-6 col-lg-5 col-xl-4 position-relative">
             <div class="bg-light rounded p-4 p-sm-5 my-4 mx-3">
                 <div class="d-flex align-items-center justify-content-between mb-3">
-                    <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>iDeliver</h3>
+                   @* <h3 class="text-primary"><i class="fa fa-hashtag me-2"></i>iDeliver</h3>*@
+                  
+                    <img style="width:120px" src="{{form.url}}/assets/images/logo.png"/>
                     <h3>Sign In</h3>
                 </div>
 
@@ -59,7 +61,7 @@
                         </div>
                         <a href="">Forgot Password</a>
                     </div>
-                    <button type="submit" class="btn btn-primary py-3 w-100 mb-4">Sign In</button>
+                    <button type="submit" class="btn btn-danger py-3 w-100 mb-4">Sign In</button>
                 </form>
             </div>
         </div>
