--- a/iDeliverPortal/wwwroot/lib/html/dashboard/css/style.css
+++ b/iDeliverPortal/wwwroot/lib/html/dashboard/css/style.css
@@ -1,6 +1,6 @@
 /********** Template CSS **********/
 :root {
-    --primary: #009CFF;
+    --danger: #009CFF;
     --light: #F3F6F9;
     --dark: #191C24;
 }
@@ -133,9 +133,9 @@
 
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: var(--danger);
     background: #FFFFFF;
-    border-color: var(--primary);
+    border-color: var(--danger);
 }
 
 .sidebar .navbar .navbar-nav .nav-link i {
@@ -182,7 +182,7 @@
 
 .content .navbar .navbar-nav .nav-link:hover,
 .content .navbar .navbar-nav .nav-link.active {
-    color: var(--primary);
+    color: var(--danger);
 }
 
 .content .navbar .sidebar-toggler,
@@ -237,11 +237,11 @@
 
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-    background: var(--primary);
+    background: var(--danger);
 }
 
 .bootstrap-datetimepicker-widget table td.today::before {
-    border-bottom-color: var(--primary);
+    border-bottom-color: var(--danger);
 }
 
 
@@ -266,12 +266,12 @@
     margin: 0 5px;
     width: 15px;
     height: 15px;
-    border: 5px solid var(--primary);
+    border: 5px solid var(--danger);
     border-radius: 15px;
     transition: .5s;
 }
 
 .testimonial-carousel .owl-dot.active {
     background: var(--dark);
-    border-color: var(--primary);
+    border-color: var(--danger);
 }
