--- a/iDeliverPortal/wwwroot/partial/Driver.html
+++ b/iDeliverPortal/wwwroot/partial/Driver.html
@@ -12,7 +12,6 @@
 
     </ul>
 
-    <!-- todo recreate by hussam using form tag with validation -->
     <div ng-if="driver.tabs==2 || driver.tabs==3">
         <div class="col-md-12">
             <div class="row">
@@ -25,18 +24,24 @@
                 </div>
 
                 <!-- driver usname and national number -->
-                <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
+                <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
                     <label>Username</label>
                     <input type="text" ng-model="driver.obj.username" class="form-control" required>
                     <small class="text-danger" ng-if="driver.isvalid && driver.obj.username==''">This field is Required </small>
                 </div>
 
-                <div class="form-group col-md-6 col-lg-6 col-sm-12 p-1 my-1">
+                <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
                     <label>National Number</label>
                     <input type="text" ng-model="driver.obj.nationalNumber" class="form-control" required>
                     <small class="text-danger" ng-if="driver.isvalid && driver.obj.nationalNumber==''">This field is Required </small>
                 </div>
-
+                <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
+                    <label>Delivery Percent</label>
+                    <!--<select class="form-control" ng-model="driver.obj.deliveryPercent">
+                        <option ng-repeat="item in deliveryPercent" value="{{item.ID}}">{{item.Value}}</option>
+                    </select>-->
+                    <input  class="form-control" ng-model="driver.obj.deliveryPercent"/>
+                </div>
                 <!-- driver name -->
                 <div class="form-group col-md-4 col-lg-4 col-sm-12 p-1 my-1">
                     <label> First name</label>
@@ -237,9 +242,9 @@
                                 <td class="primary text-center">
                                     Mobile
                                 </td>
-                                <td class="primary text-center">
+                                <!--<td class="primary text-center">
                                     Active
-                                </td>
+                                </td>-->
                                 <td class="primary text-center">
                                 </td>
                             </tr>
@@ -255,17 +260,17 @@
                                 <td class="primary text-center">
                                     {{row.mobile}}
                                 </td>
-                                <td class="primary text-center">
+                                <!--<td class="primary text-center">
                                     <div class="form-check form-switch d-flex justify-content-center">
                                         <input class="form-check-input" type="checkbox" id="flexSwitchCheckChecked" ng-click="changeVal(row.id)" ng-checked="row.isActive">
                                     </div>
-                                </td>
+                                </td>-->
                                 <td class="primary text-center">
                                     <a href="javascript:void(0);" ng-click="getDriver(row.id)" class="fw-bold text text-primary"><i class="bi bi-pencil-square"></i></a>
                                     <a href="javascript:void(0);" ng-click="deleteDriver(row.id)" class="fw-bold text text-primary"><i class="text text-danger bi bi-trash"></i></a>
                                     <a href="javascript:void(0);" ng-click="activeDriver(row.id)" class="fw-bold text text-primary">
-                                    <i ng-if="!row.isActive" class="text text-danger bi bi-dash-circle-fill"></i>
-                                    <i  ng-if="row.isActive" class="text text-success bi bi-file-check"></i>
+                                        <i ng-if="!row.isActive" class="text text-danger bi bi-dash-circle-fill"></i>
+                                        <i ng-if="row.isActive" class="text text-success bi bi-file-check"></i>
                                     </a>
 
                                 </td>
